# rust_prog

./: Cargo.toml  readme.md
data/: state.json
src/: lib.rs  main.rs  state.rs
src/actix_hw/: basic_hw.rs  mod.rs
src/algo/: algos.rs
src/args/: args_ex.rs  mod.rs
src/cpu/: cpu.rs
src/examples/: example.rs
src/ezy/: mod.rs
src/func/: f2.rs  funcs.rs  mod.rs
src/grep/: grep.rs
src/heap_graph/: hgraph.rs  mod.rs
src/hexdump/: hex.rs
src/json/: json.rs
src/macros/: bitsets.rs  mod.rs
src/mand/: mand.rs  mand_impl.rs  mod.rs
src/mandelbrot/: images.rs  mandelbrot.rs  mandelbrot_impl.rs  mod.rs
src/refs/: ex1.rs  ex2.rs  mod.rs  selector.rs  show.rs
src/rhttp/: mod.rs  rhttp.rs  rhttp_impl.rs
src/sys/: mod.rs  normal_sys_call.rs  sys_call.rs
src/threads/: asyncs.rs  mod.rs  numerals.rs  threads.rs
src/to_do/: mod.rs  processes.rs
src/to_do/structs/: base.rs  done.rs  pending.rs
src/to_do/structs/traits/: create.rs  delete.rs  edit.rs  get.rs
