[package]
name = "rust_prog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
image = "0.24.4"
crossbeam = "0.8.2"
actix-web = "4.2.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
structopt = "0.3.26"
colored = "2.0.0"
failure = "0.1.8"