[package]
name = "rust_prog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
image = "0.24.4"
crossbeam = "0.8.2"
actix-web = "4.2.1"
#actix-rt = "2.7.0"
serde = "1.0.145"
serde_cbor = "0.10"
serde_derive = "1.0.197"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
structopt = "0.3.26"
colored = "2.0.0"
failure = "0.1.8"
futures = "0.3.25"
async-std = "1.12.0"
piston_window = "0.117"
piston2d-graphics = "0.39"
rand = "0.8"
svg ="0.16.0"
bincode = "1.3.3"